--- a/src/components/SavedDeckEntry/SavedDeckEntry.css
+++ b/src/components/SavedDeckEntry/SavedDeckEntry.css
@@ -6,11 +6,18 @@
   height: 330px;
   margin-bottom: 20px;
   padding: 15px;
+  position: relative;
 }
 
-/* .saved-deck-entry h1 {
+.saved-deck-entry h1 {
   position: absolute;
   right: 15px;
+}
+
+.saved-deck-entry button {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
 }
 
 .saved-deck-entry ul {
@@ -21,4 +28,4 @@
 
 .saved-deck-entry li {
   padding-right: 10px;
-} */
+}
